2006-03-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Enable zlib only over TCP

2006-03-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix (thanks to Sergei Golovan)

2006-03-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_privacy.erl: Fixed privacy list pushing (thanks to
	Sergei Golovan)
	* src/ejabberd_c2s.erl: Likewise

2006-03-16  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_sm.erl: Remove unnecessary use delete_object, which can,
	in some context break indexes, when used on non bag table.

2006-03-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix

2006-03-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/xml_stream.erl: Added catching of gen_fsm:send_event errors

	* src/ejabberd_s2s_out.erl: Better support for multiple SRV
	records (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_log.erl: Support for chatroom logging
	(thanks to Badlop)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* src/mod_muc/Makefile.in: Likewise
	* src/mod_muc/Makefile.win32: Likewise

2006-03-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/gen_iq_handler.erl: Added support for {queues, N} IQ handler
	type

2006-03-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix

2006-03-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix

	* src/ejabberd_auth_odbc.erl: Bugfix

2006-03-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_logger_h.erl: reopen-log function now rename the log
	file if it has not been already renamed by a logrotate process. This
	change allow ejabberd administrators to rotate log files on Windows
        (EJAB-52).

2006-02-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added a interface for node
	updating
	* src/ejabberd_update.erl: Added function update_info/0

2006-02-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)