@@ -1,3 +1,7 @@
+2006-03-31  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Bugfix
+
 2006-03-25  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_c2s.erl: Enable zlib only over TCP
